crates/deadline-cli/tests/snapshots/cli_queue_paramdefs__queue_paramdefs_existing_group_label_preserved.snap
---
source: crates/deadline-cli/tests/cli_queue_paramdefs.rs
assertion_line: 237
info:
  program: deadline
  args:
    - queue
    - paramdefs
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:61225"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:61225"
    AWS_ENDPOINT_URL_STS: "http://localhost:61225"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmp529kmc/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmp529kmc
---
success: true
exit_code: 0
----- stdout -----
- name: OutputDir
  type: PATH
  default: /tmp/output
  userInterface:
    control: CHOOSE_DIRECTORY
    groupLabel: Custom Group


----- stderr -----
